- add a main menu, where you'll select the map, and also can see the high-scores (still not completed) - add Message class (to be used for example to show the loading progress when the program loads) - move the startGame() / resetStuff() / etc to its own module (Game) - show a loading message, when starting the program - fix, Tile.removeAll(), for real now

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body
     }
 
 
-#GameMenu
+#GameMenu, #MainMenu
     {
     display: none;
     position: absolute;
@@ -26,4 +26,12 @@ body
 .button
     {
     cursor: pointer;
+    }
+
+.Message
+    {
+    position: absolute;
+    font-size: 1.5em;
+    text-align: center;
+    cursor: default;
     }
