--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,18 @@ body
     {
     background-color: rgb(90, 90, 90);
     }
+
+
+#MainMenu-selectMap > *
+    {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    }
+
+
+.mapSelected
+    {
+    background-color: darkblue;
+    }
