--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,43 @@
+html
+    {
+    min-height: 100%;
+    height: 100%;
+    }
+
 body
     {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     background-color: rgb(40, 40, 40);
     color: white;
     text-align: center;
     margin: 0;
-    }
 
-#mainCanvas
-    {
-    position: absolute;
-    top: 0;
-    left: 0;
-    /*border: 1px solid #1d5987;*/
+    min-height: 100%;
+    height: 100%;
     }
 
 
-#GameMenu, #MainMenu, #HighScore
+#GameMenu, #MainMenu, #HighScore, #mainCanvas
     {
     display: none;
-    position: absolute;
     }
 
-#GameMenu > *
+#MainMenu, #HighScore
+    {
+    align-self: center;
+    }
+
+#GameMenu
+    {
+    justify-content: space-between;
+    }
+
+
+
+#GameMenu-left > *, #GameMenu-right > *
     {
     display: inline-block;
     margin: 10px;
