--- a/css/style.css
+++ b/css/style.css
@@ -63,16 +63,28 @@ body
     }
 
 
+#MainMenu-selectMap
+    {
+    margin-bottom: 10px;
+    }
+
 #MainMenu-selectMap > *
     {
-    display: inline-block;
+    display: table-cell;
     width: 100px;
     height: 100px;
     text-align: center;
+    vertical-align: middle;
+    }
+
+#MainMenu-buttons > *
+    {
+    padding: 5px;
     }
 
 
 .mapSelected
     {
-    background-color: darkblue;
+    border-radius: 15px;
+    background-color: rgba(0, 0, 255, 0.4);
     }
