- simplify the loading message (use a existing html element (#Message), which is centered by css (flexbox), and simply show/hide it) - remove Message class, since its not used anymore - fix, call Game.updateInformation() after a shuffle, so that if the shadow option is set, to shadow the tiles after the shuffle - shuffle automatically when there's no more pairs left

--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,8 @@ body
     cursor: pointer;
     }
 
-.Message
+#Message
     {
-    position: absolute;
     font-size: 1.5em;
     text-align: center;
     cursor: default;
