- add MapInformation, which takes care of the information of each map/player (timer/pairs left/tiles left) - move the timer/pairs left/tiles left stuff from Game/GameMenu to MapInformation

--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,17 @@ body
     }
 
 
-
-#GameMenu-left > *, #GameMenu-right > *
+#GameMenu-left > *, .GameMenu-infoContainer > *, #GameMenu-right > *
     {
     display: inline-block;
     margin: 10px;
     }
 
+.GameMenu-infoContainer
+    {
+    display: inline-block;
+    margin-right: 50px;
+    }
 
 .button
     {
