--- a/css/style.css
+++ b/css/style.css
@@ -33,26 +33,32 @@ body
 #GameMenu
     {
     justify-content: space-between;
+    margin-bottom: 5px;
     }
 
 
-#GameMenu-left > *, .GameMenu-infoContainer > *, #GameMenu-right > *
+.GameMenu-infoContainer > *, #GameMenu-right > *
     {
     display: inline-block;
     margin: 0 10px;
     }
 
+#GameMenu-left > *
+    {
+    display: inline-block;
+    }
+
 .GameMenu-infoContainer
     {
     display: inline-block;
-    margin-right: 50px;
+    margin-right: 40px;
     }
 
 .MapInformation-playerNumber
     {
     background-color: rgba(100, 100, 255, 0.5);
     border-radius: 5px;
-    padding: 0 10px;
+    padding: 0 8px;
     }
 
 .button
