--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html
     height: 100%;
     }
 
+
 body
     {
     display: flex;
@@ -25,10 +26,105 @@ body
     display: none;
     }
 
+
+.button
+    {
+    cursor: pointer;
+    }
+
+
+.button:hover
+    {
+    border-left: 1px dotted rgba(100, 100, 255, 0.5);
+    border-right: 1px dotted rgba(100, 100, 255, 0.5);
+    }
+
+
+#Message
+    {
+    font-size: 1.5em;
+    text-align: center;
+    cursor: default;
+    }
+
+
+    /* ::: Main Menu ::: */
+
+
 #MainMenu, #HighScore
     {
     align-self: center;
     }
+
+
+#MainMenu-buttons > *
+    {
+    padding: 5px;
+    }
+
+
+    /* Select Map */
+
+
+#MainMenu-selectMap
+    {
+    margin-bottom: 10px;
+    }
+
+
+#MainMenu-selectMap > *
+    {
+    display: table-cell;
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    vertical-align: middle;
+    }
+
+
+.mapSelected
+    {
+    border-radius: 15px;
+    background-color: rgba(100, 100, 255, 0.5);
+    }
+
+
+#MainMenu-selectMap > *:hover
+    {
+    border-radius: 15px;
+    border: 1px solid rgba(100, 100, 255, 0.5);
+    }
+
+
+    /* High Score */
+
+
+#HighScore-table
+    {
+    border-spacing: 0;
+    }
+
+
+#HighScore-table td, #HighScore-table th
+    {
+    padding: 5px 10px;
+    min-width: 40px;
+    }
+
+
+#HighScore-table td:first-child, #HighScore-table th:not(:first-child)
+    {
+    background-color: rgb(90, 90, 90);
+    }
+
+#HighScore-back
+    {
+    margin: 20px;
+    }
+
+
+    /* ::: Game Menu ::: */
+
 
 #GameMenu
     {
@@ -43,16 +139,19 @@ body
     margin: 0 10px;
     }
 
+
 #GameMenu-left > *
     {
     display: inline-block;
     }
+
 
 .GameMenu-infoContainer
     {
     display: inline-block;
     margin-right: 40px;
     }
+
 
 .MapInformation-playerNumber
     {
@@ -61,46 +160,8 @@ body
     padding: 0 8px;
     }
 
-.button
+
+#GameMenu-right > *
     {
-    cursor: pointer;
-    }
-
-#Message
-    {
-    font-size: 1.5em;
-    text-align: center;
-    cursor: default;
-    }
-
-#HighScore-table td:nth-child(even), #HighScore-table th:nth-child(even)
-    {
-    background-color: rgb(90, 90, 90);
-    }
-
-
-#MainMenu-selectMap
-    {
-    margin-bottom: 10px;
-    }
-
-#MainMenu-selectMap > *
-    {
-    display: table-cell;
-    width: 100px;
-    height: 100px;
-    text-align: center;
-    vertical-align: middle;
-    }
-
-#MainMenu-buttons > *
-    {
-    padding: 5px;
-    }
-
-
-.mapSelected
-    {
-    border-radius: 15px;
-    background-color: rgba(0, 0, 255, 0.4);
+    padding: 0 15px;
     }
