--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ html
     height: 100%;
     }
 
-
 body
     {
     background-color: rgb(40, 40, 40);
@@ -16,18 +15,15 @@ body
     height: 100%;
     }
 
-
 #GameMenu, #MainMenu, #HighScore, #mainCanvas
     {
     display: none;
     }
 
-
 .button
     {
     cursor: pointer;
     }
-
 
 .button:hover
     {
@@ -35,38 +31,40 @@ body
     border-right: 1px dotted rgba(100, 100, 255, 0.5);
     }
 
-
 #Message
     {
     font-size: 1.5em;
     text-align: center;
     cursor: default;
+    position: fixed;
+    left: 0;
+    right: 0;   /* center aligned */
     }
-
 
     /* ::: Main Menu ::: */
 
-
 #MainMenu, #HighScore
     {
+    /*display: flex; set in code*/
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
     align-self: center;
+    height: 100%;
     }
-
 
 #MainMenu-buttons > *
     {
-    padding: 5px;
+    padding: 5px 25px;
     }
 
-
     /* Select Map */
-
 
 #MainMenu-selectMap
     {
     margin-bottom: 10px;
     }
-
 
 #MainMenu-selectMap > *
     {
@@ -77,13 +75,11 @@ body
     vertical-align: middle;
     }
 
-
 .mapSelected
     {
     border-radius: 15px;
     background-color: rgba(100, 100, 255, 0.5);
     }
-
 
 #MainMenu-selectMap > *:hover
     {
@@ -91,22 +87,18 @@ body
     border: 1px solid rgba(100, 100, 255, 0.5);
     }
 
-
     /* High Score */
-
 
 #HighScore-table
     {
     border-spacing: 0;
     }
 
-
 #HighScore-table td, #HighScore-table th
     {
     padding: 5px 10px;
     min-width: 40px;
     }
-
 
 #HighScore-table td:first-child, #HighScore-table th:not(:first-child)
     {
@@ -118,9 +110,7 @@ body
     margin: 20px;
     }
 
-
     /* ::: Game Menu ::: */
-
 
 #GameMenu
     {
@@ -128,19 +118,16 @@ body
     margin-bottom: 5px;
     }
 
-
 .GameMenu-infoContainer > *, #GameMenu-right > *
     {
     display: inline-block;
     margin: 0 10px;
     }
 
-
 #GameMenu-left > *
     {
     display: inline-block;
     }
-
 
 .GameMenu-infoContainer
     {
@@ -148,14 +135,12 @@ body
     margin-right: 40px;
     }
 
-
 .MapInformation-playerNumber
     {
     background-color: rgba(100, 100, 255, 0.5);
     border-radius: 5px;
     padding: 0 8px;
     }
-
 
 #GameMenu-right > *
     {
