- add donate button - update jquery library to latest version - update build dependencies to latest versions

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body
 .button
     {
     cursor: pointer;
+    color: white;
     padding: 5px 25px;
     }
 
@@ -55,6 +56,12 @@ body
     align-content: center;
     align-self: center;
     height: 100%;
+    }
+
+#MainMenu-donate
+    {
+    display: block;
+    text-decoration: none;
     }
 
     /* Select Map */
