--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Basic Elements */
+
 html {
     min-height: 100%;
     height: 100%;
@@ -8,10 +10,11 @@ body {
     color: white;
     text-align: center;
     margin: 0;
-
     min-height: 100%;
     height: 100%;
 }
+
+/* General Classes */
 
 .button {
     cursor: pointer;
@@ -23,6 +26,16 @@ body {
     border-left: 1px dotted rgba(100, 100, 255, 0.5);
     border-right: 1px dotted rgba(100, 100, 255, 0.5);
 }
+
+.inactive {
+    text-decoration: line-through;
+}
+
+.hidden {
+    display: none !important;
+}
+
+/* Global IDs */
 
 #Message {
     background-color: black;
@@ -43,15 +56,7 @@ body {
     cursor: pointer;
 }
 
-.inactive {
-    text-decoration: line-through;
-}
-
-.hidden {
-    display: none !important;
-}
-
-/* ::: Main Menu ::: */
+/* Main Menu */
 
 #MainMenu,
 #HighScore {
@@ -63,8 +68,6 @@ body {
     align-self: center;
     height: 100%;
 }
-
-/* Select Map */
 
 #MainMenu-selectMap {
     margin-bottom: 10px;
@@ -109,7 +112,7 @@ body {
     margin: 20px;
 }
 
-/* ::: Game Menu ::: */
+/* Game Menu */
 
 #GameMenu {
     display: inline-flex;
